setup of file architecture for webpack and React

--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "react-dev": "webpack -d --watch",
+    "start": "nodemon ./server/index.js"
   },
   "dependencies": {
+    "jest": "^23.4.1",
+    "webpack": "^4.16.1"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
   }
 }
