--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "jest": "^23.4.1",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.3",
     "webpack": "^4.16.1"
   },
