--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "start": "nodemon ./server/index.js"
   },
   "dependencies": {
-    "jest": "^23.4.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "webpack": "^4.16.1"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-react": "^7.10.0",
+    "jest": "^23.4.1"
   }
 }
