--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,6 @@ jobs:
       - image: circleci/node:8.11.3
 
     steps:
-      - checkout 
+      - checkout
       - run: npm install
-      - run: npm start
+      - run: npm test
