--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,15 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:8.11.3
+      
+      - image: circleci/mysql:8.0.11
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_DATABASE: pley
+          MYSQL_ROOT_HOST: 127.0.0.1
+          MYSQL_USER: root
+
 
     steps:
       - checkout
