--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
+    "express": "^4.16.3",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.3",
+    "path": "^0.12.7",
     "webpack": "^4.16.1"
   },
   "devDependencies": {
