--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
@@ -20,6 +21,8 @@
     "mysql": "^2.16.0",
     "nodemon": "^1.18.3",
     "path": "^0.12.7",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "webpack": "^4.16.1"
   },
   "devDependencies": {
