--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "express": "^4.16.3",
+    "i": "^0.3.6",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.3",
+    "npm": "^6.2.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
