--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,11 @@ jobs:
       - image: circleci/node:8.11
       - image: circleci/mysql:8.0.11
         environment:
-          - MYSQL_ALLOW_EMPTY_PASSWORD=true
-          - MYSQL_ROOT_HOST=%
+          - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+          - MYSQL_ROOT_PASSWORD=''
+          - MYSQL_DATABASE=pley
+          - MYSQL_ROOT_HOST=127.0.0.1
+          - MYSQL_USER=root
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -19,7 +22,6 @@ jobs:
       # - image: circleci/mongo:3.4.4
 
     working_directory: ~/review_list
-
     steps:
       - checkout
 
@@ -37,7 +39,7 @@ jobs:
           paths:
             - node_modules
       - run: sudo apt install -y mysql-client
-      - run: mysql -h 127.0.0.1 -u root < ./db/schema.sql
+      - run: mysql -u root < ./db/schema.sql
       - run:
           command: node ./server/index.js
           background: true
