--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "docker": "^1.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "express": "^4.16.3",
