--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon ./server/index.js",
+    "start": "node ./server/index.js",
     "test": "jest"
   },
   "dependencies": {
@@ -29,7 +29,8 @@
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "webpack": "^4.16.1"
+    "webpack": "^4.16.1",
+    "yarn": "^1.9.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -38,7 +39,6 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.4.1"
   }
